Replace floating-point constructors with valueOf