@@ -450,7 +450,7 @@ public final class AC {
      * @return <code>this</code> so it is possible to chain calls. E.g. <code>new AxisConstraint().noGrid().gap().fill()</code>.
      */
     public AC grow(float w, int... indexes) {
-        Float gw = new Float(w);
+        Float gw = Float.valueOf(w);
         for (int i = indexes.length - 1; i >= 0; i--) {
             int ix = indexes[i];
             makeSize(ix);
@@ -527,7 +527,7 @@ public final class AC {
      * @since 3.7.2
      */
     public AC shrink(float w, int... indexes) {
-        Float sw = new Float(w);
+        Float sw = Float.valueOf(w);
         for (int i = indexes.length - 1; i >= 0; i--) {
             int ix = indexes[i];
             makeSize(ix);
